--- a/app/src/main/res/layout/fragment_1.xml
+++ b/app/src/main/res/layout/fragment_1.xml
@@ -22,10 +22,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center|left"
             android:layout_weight="1"
-            android:paddingStart="30dp"
+            android:paddingStart="20dp"
             android:text="@string/user_hello"
             android:textColor="#000000"
-            android:textSize="20sp" />
+            android:textSize="24sp" />
 
         <ImageView
             android:id="@+id/img_user"
@@ -46,13 +46,15 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_weight="2"
-        android:background="@color/colorSejongRED"
-        android:orientation="vertical">
+        android:background="@drawable/ripple_effect_login"
+        android:clickable="true"
+        android:orientation="vertical"
+        android:weightSum="6.5">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="1.5"
             android:orientation="horizontal">
 
             <TextView
@@ -68,7 +70,7 @@
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/textView15"
+                android:id="@+id/text_stat_tot"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="0dp"
@@ -98,7 +100,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1.5"
-                android:background="@color/colorSejongRED"
+
                 custom:arc_angle="270"
                 custom:arc_bottom_text=""
                 custom:arc_finished_color="#ffffff"
