--- a/app/src/main/res/layout/activity_menu1_testinfo.xml
+++ b/app/src/main/res/layout/activity_menu1_testinfo.xml
@@ -208,6 +208,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:gravity="center"
+            android:clickable="true"
             android:text="@string/noalarm"
             android:textColor="#000000"
             android:textSize="24sp" />
