--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -17,6 +17,11 @@
         android:title="@string/navi_3" />
 
     <item
+        android:id="@+id/navigation_rank"
+        android:icon="@drawable/ic_rank"
+        android:title="@string/navi_rank"/>
+
+    <item
         android:id="@+id/navigation_4"
         android:icon="@drawable/ic_settings"
         android:title="@string/navi_4"/>
